--- a/Index.html
+++ b/Index.html
@@ -6,6 +6,8 @@ My name is Valentin
 <li> git clone path-to-repository </li>
 <li> git status- статус текущего локального репозитория</li>
 <li> gir add path-to-file- добавить новый файл под контроль Гита</li>
-<li> git comit -am "added new file Index.html"</li>
+<li> git comit -am "added new file Index.html"- зафиксировать изменения и дать им комментарий</li>
+<li> git push-отправить все законченные изменения на сервер</li>
+<li> git pull- забрать всежие обновления</li>
 </ul>
 </div>
